--- a/index.ipynb
+++ b/index.ipynb
@@ -201,13 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here \n",
-    "X = \n",
-    "y = "
+    "\n",
+    "X = df.drop(['target'], axis=1)\n",
+    "y = df.target"
    ]
   },
   {
@@ -220,11 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "X = X.fillna(value=0) #Fill null values\n",
+    "for col in X.columns:\n",
+    "    X[col] = (X[col]-min(X[col]))/ (max(X[col]) - min(X[col])) #We subtract the minimum and divide by the range forcing a scale of 0 to 1 for each feature\n"
    ]
   },
   {
@@ -237,11 +240,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
    ]
   },
   {
@@ -254,12 +259,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\E\\Anaconda3\\envs\\learn-env\\lib\\site-packages\\sklearn\\linear_model\\logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "logreg = LogisticRegression(fit_intercept = False, C = 1e12) #Starter code\n",
-    "#Your code here"
+    "model = logreg.fit(X_train, y_train)\n",
+    "model"
    ]
   },
   {
@@ -272,11 +300,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "y_hat_train = logreg.predict(X_train)"
    ]
   },
   {
@@ -289,11 +317,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    188\n",
+      "1     39\n",
+      "Name: target, dtype: int64\n",
+      "0    0.828194\n",
+      "1    0.171806\n",
+      "Name: target, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import numpy as np\n",
+    "#We could subtract the two columns. If values or equal, difference will be zero. Then count number of zeros.\n",
+    "residuals = np.abs(y_train - y_hat_train)\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   },
   {
@@ -305,11 +350,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    68\n",
+      "1     8\n",
+      "Name: target, dtype: int64\n",
+      "0    0.894737\n",
+      "1    0.105263\n",
+      "Name: target, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "y_hat_test = logreg.predict(X_test)\n",
+    "\n",
+    "residuals = np.abs(y_test - y_hat_test)\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   },
   {
@@ -321,12 +383,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Your answer here"
+    "the initial model is doing great.  it is easier to measure peformance with logistic regression because you can just find the ratio of correct predictions to total predictions.  "
    ]
   },
   {
@@ -341,9 +401,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -355,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
